// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarZoomModal - Snapshots > matches snapshot when closed 1`] = `null`;

exports[`AvatarZoomModal - Snapshots > matches snapshot when open with avatar image 1`] = `
<div
  aria-label="John Doe's avatar enlarged"
  aria-modal="true"
  class="fixed inset-0 z-50 flex animate-in items-center justify-center bg-black/50 duration-200 outline-none fade-in"
  data-testid="avatar-zoom-modal-overlay"
  role="dialog"
  tabindex="-1"
>
  <div
    class="relative animate-in duration-200 zoom-in-95"
    data-testid="avatar-zoom-modal-content"
  >
    <div
      class="size-(--avatar-zoom-size)"
      data-testid="avatar"
    >
      <img
        alt="John Doe's avatar"
        data-testid="avatar-image"
        src="https://example.com/avatar.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`AvatarZoomModal - Snapshots > matches snapshot when open with fallback initials 1`] = `
<div
  aria-label="Jane Smith's avatar enlarged"
  aria-modal="true"
  class="fixed inset-0 z-50 flex animate-in items-center justify-center bg-black/50 duration-200 outline-none fade-in"
  data-testid="avatar-zoom-modal-overlay"
  role="dialog"
  tabindex="-1"
>
  <div
    class="relative animate-in duration-200 zoom-in-95"
    data-testid="avatar-zoom-modal-content"
  >
    <div
      class="size-(--avatar-zoom-size)"
      data-testid="avatar"
    >
      <div
        data-testid="avatar-fallback"
      >
        JS
      </div>
    </div>
  </div>
</div>
`;
